# air-pollution-anomaly-detection

./: .env.example  .gitignore  EDA.ipynb  EDA.py  README.md  csv_to_SQL.py  get_air_data.py  pyproject.toml
.ipynb_checkpoints/: EDA-checkpoint.ipynb
data/durham_raleigh_data/: aqidaily2017.csv  aqidaily2018.csv  aqidaily2019.csv  aqidaily2020.csv  aqidaily2021.csv  aqidaily2022.csv  aqidaily2023.csv
data/phoenix_mesa_scottsdale_data/: aqidaily2017.csv  aqidaily2018.csv  aqidaily2019.csv  aqidaily2020.csv  aqidaily2021.csv  aqidaily2022.csv  aqidaily2023.csv  aqidaily2024.csv
src/air_pollution_anomaly_detection/: __init__.py  airnow.py  cli.py  config.py  csv_loader.py  database.py  ingest.py  logging_utils.py  weather.py
tests/: test_airnow.py  test_csv_loader.py
